# Prueba_Tecnica

./: .env.example  README.md  pyproject.toml
app/: db.py  main.py  models.py  schemas.py
app/services/: api_client.py  vector_service.py
