[project]
name = "prueba"
version = "0.1.0"
description = "Microservicio FastAPI para leads con Postgres y API externa"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "httpx>=0.28.1",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
